# ETL-pipeline-ML

./: .gitignore  Dockerfile  README.md  pipeline.yaml  pyproject.toml  setup-espanol.md  setup.md
.github/workflows/: cronpipeline.yml
src/app/: app_ploomber.py  env
src/data/: air_data.duckdb
src/etl/: extract.py  extract_duckdb.py
src/notebooks/: extract.ipynb  extract_duckdb.ipynb
src/notebooks/ML/: Model ML.ipynb
src/products/: extract_duckdb_pipeline.ipynb
