[tool.poetry]
name = "ETL/ML - Air Quality"
version = "0.1.0"
description = "ETL pipeline with Ploomber"
authors = ["Alejandro Leiva - aj.leivar@gmail.com", "Oscar Beltrán - ozbeltran@gmail.com"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ploomber = "^0.23.0"
jupysql = "^0.10.1"
jupysql-plugin = "^0.2.2"
duckdb-engine = "^0.9.2"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"
ipywidgets = "^8.1.1"
pandas = "2.0.3"
numpy = "^1.23.5"
matplotlib = "^3.5.1"
duckdb = "^0.9.1"
streamlit = "^1.27.2"
statsmodels = "^0.13.2"

[tool.jupysql.SqlMagic]
displaycon = false
feedback = true
autopandas  = true
named_parameters = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
